# swarm

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.alltools  Makefile  OWNERS  README.md  appveyor.yml  direct.go  global_pinning_test.go  go.mod  go.sum  network_cover  network_cover.html  network_test.go  pull_request_template.md  startmakingsense.md  swarm.go  swarm_test.go  sync_sim.go  sync_test.go  test.asc
META/: META.go
accounts/: account_manager.go
api/: act.go  api.go  (+11 more)
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/: Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  readme.md
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/: Installer.bat  JhiMstr.sln
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/Universal/: DAL.inf
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/jhi_service/: EventLogMessages.mc  jhi_service.rc  jhi_service.vcxproj
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/jhi_service/API Instrumentation/: API Instrumentation.h  ExternalApiReplacements.cpp  ExternalApiReplacements.h  ExternalApiTypedefs.h  Instructions.txt
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/libjhi/: iptver.h  jhi.rc  jhi.vcxproj  resource.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/plugins/bhplugin1/: bhPlugin.rc  bhplugin1.vcxproj  resource.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/plugins/bhplugin2/: bhplugin2.vcxproj
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/teemanagement/: TeeManagement.rc  TeeManagement.vcxproj  resource.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/teetransport/: TEETransport.rc  TeeTransport.vcxproj  resource.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/VisualStudio/test/smoketest/: SmokeTest.vcxproj
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/_git/: config  index  packed-refs
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/_git/objects/pack/: pack-efff549e8f2d8837e8758467ef5926a441416e2e.idx  pack-efff549e8f2d8837e8758467ef5926a441416e2e.pack
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/_git/refs/heads/: master
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/android/native/: jhi_adminjni.cpp  jhi_clientjni.cpp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/applets/: SpoolerApplet.dalp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/bin_linux/: bist  jhid  smoketest
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/common/: Locker.cpp  MemoryProfiling.cpp  ServiceManager.cpp  dbg-android.cpp  dbg-linux.cpp  dbg-windows.cpp  dbg.cpp  jhi_event_linux.cpp  jhi_event_win.cpp  jhi_semaphore-linux.cpp  jhi_semaphore.cpp  locker-pthread.cpp  misc.cpp  reg-android.cpp  reg-linux.cpp  reg-windows.cpp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/common/FWUpdate/: BlackList.h  FwCapsMsgs.h  FwuCommon.h  MkhiHdrs.h  MkhiMsgs.h  pinfo.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/common/include/: Build.h  CSTypedefs.h  Locker.h  MemoryProfiling.h  ServiceManager.h  Singleton.h  dbg.h  jhi.h  jhi_event.h  jhi_i.h  jhi_sdk.h  jhi_semaphore.h  jhi_version.h  misc.h  plugin_interface.h  reg.h  string_s.h  teemanagement.h  teetransport.h  typedefs_i.h  version.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/libjhi/: CommandInvoker.cpp  CommandInvoker.h  CommandsClientFactory.h  CommandsClientSocketsAndroid.cpp  CommandsClientSocketsAndroid.h  CommandsClientSocketsLinux.cpp  CommandsClientSocketsLinux.h  CommandsClientSocketsWin32.cpp  CommandsClientSocketsWin32.h  ICommandsClient.h  jhi.cpp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/plugins/bhplugin1/: jhi_plugin.cpp  jhi_plugin.h  jhi_plugin_types.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/plugins/bhplugin2/: jhi_plugin.cpp  jhi_plugin.h  jhi_plugin_internal.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/service/: AppletsManager.cpp  AppletsManager.h  AppletsPackageReader.cpp  AppletsPackageReader.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandsServerFactory.h  CommandsServerSocketsAndroid.cpp  CommandsServerSocketsAndroid.h  CommandsServerSocketsLinux.cpp  CommandsServerSocketsLinux.h  CommandsServerSocketsWin32.cpp  CommandsServerSocketsWin32.h  DLL_Loader.cpp  DLL_Loader.h  EventLog.cpp  EventLog.h  EventLogMessages.h  EventManager.cpp  EventManager.h  FWInfoFactory.h  FWInfoLinux.cpp  FWInfoLinux.h  FWInfoLinuxSockets.h  FWInfoWin32.cpp  FWInfoWin32.h  FWInfoWin32Sockets.cpp  FWInfoWin32Sockets.h  GlobalsManager.cpp  GlobalsManager.h  ICommandDispatcher.h  ICommandsServer.h  IFirmwareInfo.h  IXmlReader.h  JHIMain.cpp  JHIMain.h  LinuxService.cpp  MailBox.cpp  MailBox.h  ReadWriteLock.cpp  (+25 more)
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/service/android/: README.txt  add_dal_to_mixins.patch
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/service/linux/: jhi  jhi.conf  jhi.service
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/teemanagement/: teemanagement.cpp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/teetransport/: teetransport.c  teetransport_internal.c  teetransport_internal.h
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/test/bist/: bist.cpp
swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/test/smoketest/: smoketest.cpp  smoketest.h
(+1980 files in other folders)
